# TRPG-master

./: .gitignore  README.md
.github/workflows/: trpg-backend-ci.yml  trpg-frontend-ci.yml  trpg-sdk-ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_health.py
docs/: 产品架构文档.md
docs/module-parser/: module-content-alignment.md  module-package-review.md  module-package.template.json  parser-runtime-contract.md
docs/module-parser/paper-chase/: module-package.json  parse-report.md
e2e/tests/: account-identity.e2e.ts  character-build.e2e.ts  multiplayer-ws.e2e.ts  not-implemented.e2e.ts
trpg-app/: .env  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
trpg-app/public/: manifest.json
trpg-app/public/data/: occupations.xlsx
trpg-app/scripts/: generate-occupations-xlsx.mjs
trpg-app/src/: App.tsx  index.css  styles.css
trpg-app/src/app/: App.tsx
trpg-app/src/config/: games.ts  routes.ts
trpg-app/src/data/: character-model.ts
trpg-app/src/services/: api-client.ts  auth.ts  game.ts  room.ts  types.ts
trpg-app/src/stores/: auth-store.ts  game-store.ts  room-store.ts
trpg-backend/: .env.example  pyproject.toml
trpg-backend/scripts/: export_schema.py  validate_module_package.py
trpg-backend/tests/: conftest.py  test_examples.py  test_keeper.py  test_module_runtime.py  test_rooms.py  test_runtime_engine.py  test_ws.py
trpg-frontend/: eslint.config.js
trpg-sdk/: eslint.config.js  package-lock.json  package.json
trpg-sdk/scripts/: generate-types.ts
trpg-sdk/src/: types.ts
(+39 files in other folders)
